securitygroup.tf
###################### Security Group Definition ######################

# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/security_group
resource "aws_security_group" "TestInstanceSG" {
  name        = "TestInstanceSG"
  description = "Allow TLS inbound traffic and all outbound traffic"
  vpc_id      = aws_vpc.main.id

  tags = {
    Name = "TestInstanceSG"
  }
}

###################### Ingress Definition ######################

resource "aws_vpc_security_group_ingress_rule" "allow443" {
  security_group_id = aws_security_group.TestInstanceSG.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  to_port           = 443
}

resource "aws_vpc_security_group_ingress_rule" "allow22" {
  security_group_id = aws_security_group.TestInstanceSG.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

resource "aws_vpc_security_group_ingress_rule" "allow8080" {
  security_group_id = aws_security_group.TestInstanceSG.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 8080
  ip_protocol       = "tcp"
  to_port           = 8080
}

resource "aws_vpc_security_group_ingress_rule" "allow80" {
  security_group_id = aws_security_group.TestInstanceSG.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_ingress_rule" "allow8443" {
  security_group_id = aws_security_group.TestInstanceSG.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 8443
  ip_protocol       = "tcp"
  to_port           = 8443
}

resource "aws_vpc_security_group_ingress_rule" "allow9091" {
  security_group_id = aws_security_group.TestInstanceSG.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 9091
  ip_protocol       = "tcp"
  to_port           = 9091
}

###################### Egress Definition ######################
###
# believed -- ALLOW default if not configured
###

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
  security_group_id = aws_security_group.TestInstanceSG.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
